chore: fix pricing alignment on mobile

--- a/src/css/pricing.css
+++ b/src/css/pricing.css
@@ -113,6 +113,7 @@
 @media (max-width: 997px) {
 	.pricing .price__wrapper {
 		flex-direction: column;
+		align-items: flex-start;
 	}
 }
 
@@ -132,13 +133,15 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	justify-content: center;
 	font-weight: 1000;
 	color: var(--secondary-color);
 }
 
 @media (max-width: 997px) {
 	.pricing .price__suppl {
-		align-items: center;
+		align-items: flex-start;
+		justify-content: flex-start;
 	}
 }
 
